# Steam_game_finder

./: .gitignore  README.md
steambot-main/: requirements.txt  setup.cfg  steambot.json
steambot-main/src/catbot/: .__init__.py.swp  .__main__.py.swp  .commands.py.swp  .config.py.swp  .events.py.swp  __init__.py  __main__.py  commands.py  events.py
steambot-main/src/steambot/: __init__.py  commands.py  config.py  database.py  events.py  steam_api.py
