[metadata]
name = steambot
version = 0.0.0
author = WiCS hackathon team: Brian ONeil, Chloe Holland, Bradon Kanyid
author_email = cas28@pdx.edu
description = A Discord bot to match users with games they all have
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hollan2/Steam_game_finder
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
